test/good/classes/print01.px

class Test def
    String s

    func toString() String def
        return self.s

obj = Test()
obj.s = "test"
print obj
